--- a/index.html
+++ b/index.html
@@ -390,6 +390,9 @@
                         <h3>Get news &amp; updates</h3>
                     </div>
                     <div class="col-md-12">
+                        <a href="#" class="position-absolute end-0 p-3 m-3 text-white">
+                            <i class="bi bi-arrow-up-circle h1"></i>
+                        </a>
                         <form action="" method="POST">
                             <div class="row">
                                 <div class="col-md-4 mb-4">
